前端: 完成source analyse rule部分功能

--- a/frontend/src/styles/base/color.scss
+++ b/frontend/src/styles/base/color.scss
@@ -18,7 +18,7 @@ $orange: hsl(14, 100%, 53%);
 $purple: hsl(271, 100%, 71%);
 $pink: #FA7C91;
 $brown: #757763;
-$font-black: #2c3e50; //文字颜色
+$font-black: #0e151a; //文字颜色
 $lightgrey: #efefef; //侧边栏颜色，同时也是一般按钮/块的背景色
 $dark-lightgrey: #e4e4e4; //更深的侧边栏颜色
 $light-dark: #343434; //dark mode下的侧边栏颜色
