前端: 补充漏掉的提交

--- a/frontend/src/components/SelectList.module.scss
+++ b/frontend/src/components/SelectList.module.scss
@@ -12,6 +12,8 @@
   > .select-item {
     font-size: $font-size-7;
     padding: 0.5em 0.75em;
+    white-space: nowrap;
+    overflow: hidden;
     @media (prefers-color-scheme: light) {
       &:not(.selected) {
         color: $font-black;
