前端: 添加annotation页面

--- a/frontend/src/layouts/SideLayout/style.module.scss
+++ b/frontend/src/layouts/SideLayout/style.module.scss
@@ -126,3 +126,10 @@
         &:not(.has-cl-button) { left: $margin-size; }
     }
 }
+
+.main-content {
+    position: absolute;
+    top: $title-bar-height;
+    left: 0; right: 0; bottom: 0;
+    overflow: auto;
+}
