--- a/frontend/src/styles/components/group.sass
+++ b/frontend/src/styles/components/group.sass
@@ -6,5 +6,15 @@
   > a
     margin-bottom: $spacing-1
     display: inline-block
+    vertical-align: super
     &:not(:last-child)
       margin-right: $spacing-2
+
+.single-line-group
+  > input,
+  > button,
+  > a
+    display: inline-block
+    vertical-align: super
+    &:not(:last-child)
+      margin-right: $spacing-1
