前端: 完成annotation列表基本样式

--- a/frontend/src/styles/components/table.sass
+++ b/frontend/src/styles/components/table.sass
@@ -19,6 +19,7 @@
     border: solid $dark-lightgrey
     border-width: 0 0 1px
     padding: 0.5em 0.75em
+    line-height: 1.6
     height: 1.25rem
     vertical-align: baseline
     &.is-narrow
