--- a/frontend/src/styles/components/table.sass
+++ b/frontend/src/styles/components/table.sass
@@ -29,6 +29,6 @@
       &.is-width-#{$i * 5}
         width: #{percentage($i / 20)}
     @media (prefers-color-scheme: dark)
-      border-color: $more-dark
+      border-color: $light-dark
   tbody tr:last-child td
     border-bottom-width: 0
