--- a/frontend/src/views/Main/Annotations/style.module.scss
+++ b/frontend/src/views/Main/Annotations/style.module.scss
@@ -1,8 +1,2 @@
-@import '@/styles/variable.sass';
+@import "@/styles/variable.sass";
 
-
-#app #hedge #hedge-authors #panel-list-view {
-    padding: 0.5rem;
-    overflow: auto;
-    max-height: 100%; width: 100%;
-}
