前端: 初步完成virtual grid组件

--- a/frontend/src/styles/components/box.sass
+++ b/frontend/src/styles/components/box.sass
@@ -6,6 +6,7 @@ $box-shadow-dark-mode: 0 0.5em 1em -0.125em rgba($white, 0.1), 0 0px 0 1px rgba(
 
 .box
   border-radius: $radius-size-large
+  box-sizing: border-box
 
   display: block
   padding: 1.25rem
