--- a/frontend/src/views.old/Hedge/MainPanel/ViewAuthorsDetail/style.scss
+++ b/frontend/src/views.old/Hedge/MainPanel/ViewAuthorsDetail/style.scss
@@ -1,4 +1,4 @@
-@import '@/styles/variable.scss';
+@import '@/styles/variable.sass';
 
 #app #hedge #hedge-authors-detail {
     position: relative;
