--- a/frontend/src/styles/components/table.sass
+++ b/frontend/src/styles/components/table.sass
@@ -10,25 +10,32 @@
     background-color: $light
     @media (prefers-color-scheme: dark)
       background-color: $more-dark
+
+  tr
+    th,
+    td
+      border: solid $dark-lightgrey
+      border-width: 0 0 1px
+      padding: 0.5em 0.75em
+      line-height: 1.6
+      height: 1.25rem
+      vertical-align: baseline
+      &.is-narrow
+        white-space: nowrap
+        width: 1%
+      @for $i from 1 through 20
+        &.is-width-#{$i * 5}
+          width: #{percentage($i / 20)}
+      @media (prefers-color-scheme: dark)
+        border-color: $light-dark
+    &.is-selected
+      background-color: $link
+      color: $white
   thead
     th,
     td
       border-width: 0 0 2px
-  th,
-  td
-    border: solid $dark-lightgrey
-    border-width: 0 0 1px
-    padding: 0.5em 0.75em
-    line-height: 1.6
-    height: 1.25rem
-    vertical-align: baseline
-    &.is-narrow
-      white-space: nowrap
-      width: 1%
-    @for $i from 1 through 20
-      &.is-width-#{$i * 5}
-        width: #{percentage($i / 20)}
-    @media (prefers-color-scheme: dark)
-      border-color: $light-dark
-  tbody tr:last-child td
-    border-bottom-width: 0
+  tbody
+    tr:last-child
+      td
+        border-bottom-width: 0
