前端: 完成detail数据端点的VCA; 完成annotation detail接入显示

--- a/frontend/src/styles/base/font.sass
+++ b/frontend/src/styles/base/font.sass
@@ -1,4 +1,4 @@
 
-$family-std: BlinkMacSystemFont,-apple-system,Ubuntu,Arial,sans-serif
+$family-std: sans-serif
 $family-monospace: monospace
 $family-monaco: Monaco, monospace
