--- a/frontend/src/views/Main/Annotations/style.module.scss
+++ b/frontend/src/views/Main/Annotations/style.module.scss
@@ -19,4 +19,12 @@
       }
     }
   }
+  .annotation-target-editor {
+    p {
+      margin-top: $spacing-1;
+      &.sub {
+        margin-left: 1rem;
+      }
+    }
+  }
 }
