前端: 确定editor panel的模式设计; 完成annotation的详情面板、编辑器与错误提示

--- a/frontend/src/styles/components/icon.sass
+++ b/frontend/src/styles/components/icon.sass
@@ -4,6 +4,7 @@
 .icon
   display: inline-block
   align-items: center
+  min-width: 1em
   //对font awesome的修正
   > .fa-lg
     vertical-align: -0.1em
