--- a/frontend/src/styles/utils/layout.sass
+++ b/frontend/src/styles/utils/layout.sass
@@ -81,3 +81,19 @@
     .py-#{$name}
         padding-top: $size
         padding-bottom: $size
+    .m-m#{$name}
+        margin: #{-$size}
+    .mt-m#{$name}
+        margin-top: #{-$size}
+    .mb-m#{$name}
+        margin-bottom: #{-$size}
+    .ml-m#{$name}
+        margin-left: #{-$size}
+    .mr-m#{$name}
+        margin-right: #{-$size}
+    .mx-m#{$name}
+        margin-left: #{-$size}
+        margin-right: #{-$size}
+    .my-m#{$name}
+        margin-top: #{-$size}
+        margin-bottom: #{-$size}
