--- a/frontend/src/views/Main/Annotations/style.module.scss
+++ b/frontend/src/views/Main/Annotations/style.module.scss
@@ -22,6 +22,9 @@
   .annotation-target-editor {
     p {
       margin-top: $spacing-1;
+      span:global(.icon) {
+        width: 1rem;
+      }
       &.sub {
         margin-left: 1rem;
       }
