前端: 完成annotation popup menu; top bar布局方式调整

--- a/frontend/src/styles/components/input.sass
+++ b/frontend/src/styles/components/input.sass
@@ -34,7 +34,8 @@ input
 
   &:focus
     box-shadow: 0 0 3px $dark-lightgrey
-  &.fullwidth
+
+  &.is-fullwidth
     max-width: 100%
     width: 100%
   @each $name, $pair in $input-size-map
