前端: 添加flex样式; 调整topic页面结构

--- a/frontend/src/styles/utils/format.sass
+++ b/frontend/src/styles/utils/format.sass
@@ -36,6 +36,8 @@
 //文本不换行功能
 .no-wrap
   white-space: nowrap
+  &.overflow-hidden
+    overflow: hidden
   &.overflow-ellipsis
     overflow: hidden
     text-overflow: ellipsis
