--- a/frontend/src/styles/components/table.sass
+++ b/frontend/src/styles/components/table.sass
@@ -19,7 +19,7 @@
       padding: 0.5em 0.75em
       line-height: 1.6
       height: 1.25rem
-      vertical-align: baseline
+      vertical-align: center
       &.is-narrow
         white-space: nowrap
         width: 1%
