--- a/frontend/src/styles/components/table.sass
+++ b/frontend/src/styles/components/table.sass
@@ -11,11 +11,10 @@
     @media (prefers-color-scheme: dark)
       background-color: $more-dark
 
+
   tr
     th,
     td
-      border: solid $dark-lightgrey
-      border-width: 0 0 1px
       padding: 0.5em 0.75em
       line-height: 1.6
       height: 1.25rem
@@ -26,11 +25,15 @@
       @for $i from 1 through 20
         &.is-width-#{$i * 5}
           width: #{percentage($i / 20)}
-      @media (prefers-color-scheme: dark)
-        border-color: $light-dark
     &.is-selected
       background-color: $link
       color: $white
+  &:not(.no-border)
+    tr th,td
+      border: solid $dark-lightgrey
+      border-width: 0 0 1px
+      @media (prefers-color-scheme: dark)
+        border-color: $light-dark
   thead
     th,
     td
