--- a/frontend/src/styles/components/container.sass
+++ b/frontend/src/styles/components/container.sass
@@ -10,6 +10,7 @@
   @media screen and (min-width: 1400px)
     max-width: 960px
 
-
-
-
+.scroll-container
+  width: 100%
+  height: 100%
+  overflow-y: auto
