前端: topic edit view完善合法性检查和错误处理, 添加score编辑器

--- a/frontend/src/layouts/modules/MessageBoxModule/style.module.scss
+++ b/frontend/src/layouts/modules/MessageBoxModule/style.module.scss
@@ -48,11 +48,17 @@
       > .title {
         font-size: $font-size-medium;
         color: $black;
+        margin-bottom: 2rem;
       }
       > .message {
-        margin: 1rem 0.25rem;
+        margin: 0 0.75rem 0.25rem 0.75rem;
+      }
+      > .detail-message {
+        margin: 0 0.75rem;
+        color: $grey;
       }
       > .buttons {
+        margin-top: 2rem;
         > button {
           min-width: 4rem;
           &:not(:last-child) {
