前端: 适配API的更新引起的UI变化

--- a/frontend/src/views/Setting/DBMeta/style.module.scss
+++ b/frontend/src/views/Setting/DBMeta/style.module.scss
@@ -7,7 +7,7 @@
     justify-content: left;
     margin-bottom: 0.25rem;
     > .score {
-      line-height: $height-std;
+      line-height: $height-small;
       width: 1.25rem;
     }
     > .word {
