前端: 整理颜色主题配置; 移除一部分旧代码

--- a/frontend/src/styles/App.sass
+++ b/frontend/src/styles/App.sass
@@ -10,11 +10,11 @@ body
   font-family: $family-std
   text-rendering: optimizeLegibility
   font-size: $font-size-7
-  color: $font-color-std
+  color: $literal-std
   background-color: $white
   @media (prefers-color-scheme: dark)
     color: $white
-    background-color: $dark
+    background-color: $bg-dm
 
 //HTML文档本身的滚动条被禁用
 html::-webkit-scrollbar
