--- a/frontend/src/styles/components/generic.sass
+++ b/frontend/src/styles/components/generic.sass
@@ -13,7 +13,7 @@ section
   display: block
 
 code
-  color: darken($danger, 15%)
+  color: darken($red, 15%)
   font-weight: normal
   padding-right: 0.25em
   padding-left: 0.25em
