--- a/frontend/src/styles/variable.sass
+++ b/frontend/src/styles/variable.sass
@@ -4,13 +4,13 @@
  */
 
 /*标准文本颜色*/
-$font-color-std: $font-black
-$font-color-dark-mode: $white
+$literal-std: $literal
+$literal-dark-mode: $white
 /*灰色区域底色颜色*/
-$background-color-side: $lightgrey
-$background-color-side-dark: $dark-lightgrey
-$background-color-side-dark-mode: $light-dark
-$background-color-side-dark-dark-mode: $more-light-dark
+$background-color-side: $sidebar
+$background-color-side-dark: $deep-sidebar
+$background-color-side-dark-mode: $sidebar-dm
+$background-color-side-dark-dark-mode: $deep-sidebar-dm
 /*灰色底色与白色的分界线颜色*/
 $border-color-side: #dddddd
 $border-color-side-dark: #d0d0d0
