--- a/frontend/src/views/Main/Annotations/style.module.scss
+++ b/frontend/src/views/Main/Annotations/style.module.scss
@@ -3,9 +3,9 @@
 @import "@/styles/base/size.sass";
 
 .pane-detail-content {
-  border-left: solid 1px $dark-lightgrey;
+  border-left: solid 1px $deep-sidebar;
   @media (prefers-color-scheme: dark) {
-    border-left-color: $light-dark;
+    border-left-color: $sidebar-dm;
   }
 
   .annotation-target-view {
