--- a/frontend/src/styles/base/color.scss
+++ b/frontend/src/styles/base/color.scss
@@ -1,105 +1,157 @@
-@import 'functions.sass';;
+@import 'functions.sass';
 /**
  * 原色的基本定义。
  */
 
+//基本彩色
+$cyan: hsl(171, 100%, 41%);
+$lightgreen: hsl(153, 53%, 53%);
+$blue: hsl(207, 61%, 53%);
+$blue-purple: hsl(229, 53%, 53%);
+$yellow: hsl(44, 100%, 77%);
+$red: hsl(348, 86%, 61%);
+$orange: hsl(14, 100%, 53%);
+$purple: hsl(271, 100%, 71%);
+$pink: #FA7C91;
+$tea: #757763;
+
+//基本黑白颜色
 $white: hsl(0, 0%, 100%);
 $black: hsl(0, 0%, 4%);
 $grey: hsl(0, 0%, 48%);
 $light: hsl(0, 0%, 95%);
-$dark: #212121; //dark mode下的背景色
-$primary: hsl(171, 100%, 41%);
-$success: hsl(153, 53%, 53%);
-$info: hsl(207, 61%, 53%);
-$link: hsl(229, 53%, 53%);
-$warning: hsl(44, 100%, 77%);
-$danger: hsl(348, 86%, 61%);
-$orange: hsl(14, 100%, 53%);
-$purple: hsl(271, 100%, 71%);
-$pink: #FA7C91;
-$brown: #757763;
-$font-black: #0e151a; //文字颜色
-$lightgrey: #efefef; //侧边栏颜色，同时也是一般按钮/块的背景色
-$dark-lightgrey: #e4e4e4; //更深的侧边栏颜色
-$light-dark: #343434; //dark mode下的侧边栏颜色
-$more-light-dark: #2e2e2e; //dark mode下更浅的侧边栏颜色
-$more-dark: #151515; //更深的dark，作为light在dark mode下的反色
+$deep-light: #efefef;
+$more-deep-light: #e4e4e4;
+$dark: #212121;
+$shallow-dark: #343434;
+$more-shallow-dark: #2e2e2e;
+$deep-dark: #151515;
 
+//确定的主题色
+//背景色
+$bg: $white;
+$bg-dm: $dark;
+//浅色背景色
+$shallow-bg: $light;
+$shallow-bg-dm: $deep-dark;
+//文本颜色
+$literal: $black;
+$literal-dm: $white;
+//侧边栏+一般按钮+块颜色
+$sidebar: $deep-light;
+$sidebar-dm: $shallow-dark;
+//更深的侧边栏+一般按钮颜色
+$deep-sidebar: $more-deep-light;
+$deep-sidebar-dm: $more-shallow-dark;
+//其他主题色
+$success: $lightgreen;
+$info: $blue;
+$link: $blue-purple;
+$warning: $yellow;
+$danger: $red;
+
+//衍生颜色
 $light-invert: findColorInvert($light);
 $dark-invert: findColorInvert($dark);
 $grey-invert: findColorInvert($grey);
-$primary-invert: findColorInvert($primary);
-$success-invert: findColorInvert($success);
-$info-invert: findColorInvert($info);
-$link-invert: findColorInvert($link);
-$warning-invert: findColorInvert($warning);
-$danger-invert: findColorInvert($danger);
+$cyan-invert: findColorInvert($cyan);
+$lightgreen-invert: findColorInvert($lightgreen);
+$blue-invert: findColorInvert($blue);
+$blue-purple-invert: findColorInvert($blue-purple);
+$yellow-invert: findColorInvert($yellow);
+$red-invert: findColorInvert($red);
 $orange-invert: findColorInvert($orange);
 $purple-invert: findColorInvert($purple);
 $pink-invert: findColorInvert($pink);
-$brown-invert: findColorInvert($brown);
-$side-grey-invert: findColorInvert($lightgrey);
-$dark-side-grey-invert: findColorInvert($dark-lightgrey);
-$font-black-invert: findColorInvert($font-black);
+$tea-invert: findColorInvert($tea);
 
-$primary-light: findLightColor($primary);
-$success-light: findLightColor($success);
-$info-light: findLightColor($info);
-$link-light: findLightColor($link);
-$warning-light: findLightColor($warning);
-$danger-light: findLightColor($danger);
+$cyan-light: findLightColor($cyan);
+$lightgreen-light: findLightColor($lightgreen);
+$blue-light: findLightColor($blue);
+$blue-purple-light: findLightColor($blue-purple);
+$yellow-light: findLightColor($yellow);
+$red-light: findLightColor($red);
 $orange-light: findLightColor($orange);
 $purple-light: findLightColor($purple);
 $pink-light: findLightColor($pink);
-$brown-light: findLightColor($brown);
+$tea-light: findLightColor($tea);
 
-$primary-dark: findDarkColor($primary);
-$success-dark: findDarkColor($success);
-$info-dark: findDarkColor($info);
-$link-dark: findDarkColor($link);
-$warning-dark: findDarkColor($warning);
-$danger-dark: findDarkColor($danger);
+$cyan-dark: findDarkColor($cyan);
+$lightgreen-dark: findDarkColor($lightgreen);
+$blue-dark: findDarkColor($blue);
+$blue-purple-dark: findDarkColor($blue-purple);
+$yellow-dark: findDarkColor($yellow);
+$red-dark: findDarkColor($red);
 $orange-dark: findDarkColor($orange);
 $purple-dark: findDarkColor($purple);
 $pink-dark: findDarkColor($pink);
-$brown-dark: findDarkColor($brown);
+$tea-dark: findDarkColor($tea);
 
+//颜色组
 $colors: (
-        "white" ($white, $font-black),
-        "black" ($black, $white),
-        "font-black" ($font-black, $font-black-invert),
+        //基本颜色
+        "white" ($white, $black, $white, $black),
+        "black" ($black, $white, $black, $white),
         "grey" ($grey, $grey-invert),
-        "light" ($light, $more-dark),
+        "light" ($light, $deep-dark),
+        "deep-light" ($deep-light, $shallow-dark),
+        "more-deep-light" ($more-deep-light, $more-shallow-dark),
         "dark" ($dark, $dark-invert),
-        "lightgrey" ($lightgrey, $side-grey-invert),
-        "dark-lightgrey" ($dark-lightgrey, $dark-side-grey-invert),
-        "primary" ($primary, $primary-invert, $primary-light, $primary-dark),
-        "link" ($link, $link-invert, $link-light, $link-dark),
-        "info" ($info, $info-invert, $info-light, $info-dark),
-        "success" ($success, $success-invert, $success-light, $success-dark),
-        "warning" ($warning, $warning-invert, $warning-light, $warning-dark),
-        "danger" ($danger, $danger-invert, $danger-light, $danger-dark),
+        "shallow-dark" ($shallow-dark, $deep-light),
+        "more-shallow-dark" ($more-shallow-dark, $more-deep-light),
+        "deep-dark" ($deep-dark, $white),
+        "cyan" ($cyan, $cyan-invert, $cyan-light, $cyan-dark),
+        "lightgreen" ($lightgreen, $lightgreen-invert, $lightgreen-light, $lightgreen-dark),
+        "blue" ($blue, $blue-invert, $blue-light, $blue-dark),
+        "blue-purple" ($blue-purple, $blue-purple-invert, $blue-purple-light, $blue-purple-dark),
+        "yellow" ($yellow, $yellow-invert, $yellow-light, $yellow-dark),
+        "red" ($red, $red-invert, $red-light, $red-dark),
         "purple" ($purple, $purple-invert, $purple-light, $purple-dark),
         "pink" ($pink, $pink-invert, $pink-light, $pink-dark),
-        "brown" ($brown, $brown-invert, $brown-light, $brown-dark)
+        "tea" ($tea, $tea-invert, $tea-light, $tea-dark),
+        //主题色
+        "bg" ($bg, $bg-dm),
+        "shallow-bg" ($shallow-bg, $shallow-bg-dm),
+        "literal" ($literal, $literal-dm),
+        "sidebar" ($sidebar, $sidebar-dm),
+        "deep-sidebar" ($deep-sidebar, $deep-sidebar-dm),
+        "success" ($lightgreen, $lightgreen-invert, $lightgreen-light, $lightgreen-dark),
+        "info" ($blue, $blue-invert, $blue-light, $blue-dark),
+        "link" ($blue-purple, $blue-purple-invert, $blue-purple-light, $blue-purple-dark),
+        "warning" ($yellow, $yellow-invert, $yellow-light, $yellow-dark),
+        "danger" ($red, $red-invert, $red-light, $red-dark),
 );
 
 $colors-dark-mode: (
+        //基本颜色
         "white" ($dark, $white),
         "black" ($white, $black),
-        "font-black" ($white, $light),
         "grey" ($grey, $grey-invert),
-        "light" ($more-dark, $light),
+        "light" ($deep-dark, $light),
+        "deep-light" ($shallow-dark, $white),
+        "more-deep-light" ($more-shallow-dark, $white),
         "dark" ($dark-invert, $dark),
-        "lightgrey" ($light-dark, $white),
-        "dark-lightgrey" ($more-light-dark, $white),
-        "primary" ($primary, $primary-invert, $primary-light, $primary-dark),
-        "link" ($link, $link-invert, $link-light, $link-dark),
-        "info" ($info, $info-invert, $info-light, $info-dark),
-        "success" ($success, $success-invert, $success-light, $success-dark),
-        "warning" ($warning, $warning-invert, $warning-light, $warning-dark),
-        "danger" ($danger, $danger-invert, $danger-light, $danger-dark),
+        "shallow-dark" ($deep-light, $shallow-dark),
+        "more-shallow-dark" ($more-deep-light, $more-shallow-dark),
+        "deep-dark" ($white, $deep-dark),
+        "cyan" ($cyan, $cyan-invert, $cyan-light, $cyan-dark),
+        "lightgreen" ($lightgreen, $lightgreen-invert, $lightgreen-light, $lightgreen-dark),
+        "blue" ($blue, $blue-invert, $blue-light, $blue-dark),
+        "blue-purple" ($blue-purple, $blue-purple-invert, $blue-purple-light, $blue-purple-dark),
+        "yellow" ($yellow, $yellow-invert, $yellow-light, $yellow-dark),
+        "red" ($red, $red-invert, $red-light, $red-dark),
         "purple" ($purple, $purple-invert, $purple-light, $purple-dark),
         "pink" ($pink, $pink-invert, $pink-light, $pink-dark),
-        "brown" ($brown, $brown-invert, $brown-light, $brown-dark)
+        "tea" ($tea, $tea-invert, $tea-light, $tea-dark),
+        //主题色
+        "bg" ($bg-dm, $bg),
+        "shallow-bg" ($shallow-bg-dm, $shallow-bg),
+        "literal" ($literal-dm, $literal),
+        "sidebar" ($sidebar-dm, $sidebar),
+        "deep-sidebar" ($deep-sidebar-dm, $deep-sidebar),
+        "success" ($lightgreen, $lightgreen-invert, $lightgreen-light, $lightgreen-dark),
+        "info" ($blue, $blue-invert, $blue-light, $blue-dark),
+        "link" ($blue-purple, $blue-purple-invert, $blue-purple-light, $blue-purple-dark),
+        "warning" ($yellow, $yellow-invert, $yellow-light, $yellow-dark),
+        "danger" ($red, $red-invert, $red-light, $red-dark),
 );
