--- a/frontend/src/styles/components/form.sass
+++ b/frontend/src/styles/components/form.sass
@@ -16,9 +16,9 @@
         color: $color
 
 .label
-  color: $black
+  color: $literal
   @media (prefers-color-scheme: dark)
-    color: $white
+    color: $literal-dm
   display: block
   font-weight: 700
   &:not(:last-child)
@@ -49,12 +49,12 @@
     line-height: 1.2
     height: $height-std
     padding: 0 0.75em 0 0.75em
-    border: 1px solid $dark-lightgrey
+    border: 1px solid $deep-sidebar
     border-radius: $radius-size-std
     @media (prefers-color-scheme: dark)
-      background-color: $light-dark
-      color: $white
-      border-color: $more-light-dark
+      background-color: $sidebar-dm
+      color: $literal-dm
+      border-color: $deep-sidebar-dm
   $select-size-map: ("small" ($font-size-8, $height-small), "medium" ($font-size-6, $height-medium))
   @each $name, $pair in $select-size-map
     $font-size: nth($pair, 1)
