调整dbPath的用例; 修正前端API定义类型错误

--- a/frontend/src/layouts/layouts/SideLayout/style.module.scss
+++ b/frontend/src/layouts/layouts/SideLayout/style.module.scss
@@ -92,7 +92,7 @@
   &.background {
     background-color: $white;
     @media (prefers-color-scheme: dark) {
-      background-color: $dark;
+      background-color: $bg-dm;
     }
   }
 
