--- a/frontend/src/layouts/layouts/TopBarLayout/style.module.scss
+++ b/frontend/src/layouts/layouts/TopBarLayout/style.module.scss
@@ -40,7 +40,7 @@
             box-shadow: 0 0.5em 1em -0.125em rgba($black, 0.1), 0 0px 0 1px rgba($black, 0.02);
         }
         @media (prefers-color-scheme: dark) {
-            background: $dark;
+            background: $bg-dm;
             box-shadow: 0 0.5em 1em -0.125em rgba($white, 0.1), 0 0px 0 1px rgba($white, 0.02);
         }
 
