--- a/frontend/src/styles/utils/display.sass
+++ b/frontend/src/styles/utils/display.sass
@@ -5,6 +5,9 @@
 .is-hidden
   visibility: hidden
 
+.is-overflow-hidden
+  overflow: hidden
+
 .is-cursor-pointer
   cursor: pointer
 .is-cursor-default
