前端: 引入标准字体; 调整部分样式

--- a/frontend/src/styles/App.sass
+++ b/frontend/src/styles/App.sass
@@ -10,10 +10,10 @@ body
   font-family: $family-std
   text-rendering: optimizeLegibility
   font-size: $font-size-7
-  color: $literal-std
+  color: $literal
   background-color: $white
   @media (prefers-color-scheme: dark)
-    color: $white
+    color: $literal-dm
     background-color: $bg-dm
 
 //HTML文档本身的滚动条被禁用
