--- a/frontend/src/styles/base/font.sass
+++ b/frontend/src/styles/base/font.sass
@@ -1,4 +1,4 @@
 
-$family-std: sans-serif
-$family-monospace: monospace
-$family-monaco: Monaco, monospace
+$family-std: PingFang, sans-serif
+$family-monospace: "Fira Code", monospace
+$family-monaco: "Fira Code", Monaco, monospace
