--- a/frontend/src/styles/layouts/menu.sass
+++ b/frontend/src/styles/layouts/menu.sass
@@ -8,7 +8,7 @@
         font-size: $font-size-std
         letter-spacing: 0.1em
         margin-top: $spacing-2
-        color: $more-shallow-dark
+        color: $grey
         @media (prefers-color-scheme: dark)
             color: $deep-sidebar
         a
