--- a/frontend/src/layouts/editor-components/AnnotationEditor.module.scss
+++ b/frontend/src/layouts/editor-components/AnnotationEditor.module.scss
@@ -10,21 +10,17 @@
       width: 100%;
       padding: 0.25rem 0;
 
-      .select-item {
+      .item {
+        padding: 0 0 0.25rem 0.25rem;
+      }
+
+      .more-item {
         cursor: pointer;
         font-size: $font-size-7;
         white-space: nowrap;
         overflow: hidden;
+        margin-top: -0.25rem;
         padding: 0.25rem 0 0.25rem 0.5rem;
-        border-top: solid 1px $sidebar;
-        &:last-child {
-          border-bottom: solid 1px $sidebar;
-        }
-
-        > i:global(.fa) {
-          margin-right: 0.5rem;
-        }
-
         &.selected {
           color: $white;
           background-color: $link;
@@ -36,6 +32,43 @@
           }
         }
         @media (prefers-color-scheme: dark) {
+          &:not(.selected) {
+            color: $literal-dm;
+            background-color: $bg-dm;
+          }
+        }
+      }
+
+      .new-item {
+        cursor: pointer;
+        font-size: $font-size-7;
+        white-space: nowrap;
+        overflow: hidden;
+        padding: 0.25rem 0 0.25rem 0.5rem;
+
+        > i:global(.fa) {
+          margin-right: 0.5rem;
+        }
+
+        &.selected {
+          color: $white;
+          background-color: $link;
+        }
+        @media (prefers-color-scheme: light) {
+          border-top: solid 1px $sidebar;
+          &:last-child {
+            border-bottom: solid 1px $sidebar;
+          }
+          &:not(.selected) {
+            color: $literal;
+            background-color: $bg;
+          }
+        }
+        @media (prefers-color-scheme: dark) {
+          border-top: solid 1px $sidebar-dm;
+          &:last-child {
+            border-bottom: solid 1px $sidebar-dm;
+          }
           &:not(.selected) {
             color: $literal-dm;
             background-color: $bg-dm;
