--- a/frontend/src/layouts/editor-components/AnnotationEditor.module.scss
+++ b/frontend/src/layouts/editor-components/AnnotationEditor.module.scss
@@ -2,20 +2,73 @@
 @import "@/styles/base/color";
 
 .editor {
+
   .picker {
     position: relative;
     display: inline-block;
+
     > .picker-board {
       position: absolute;
       width: 100%;
-      padding: 0.25rem 0;
+      padding: 0;
+
+      > .recent-content {
+        > .scroll-content {
+          overflow-y: auto;
+          max-height: 5rem;
+          padding: 0.25rem;
+        }
+      }
+
+      > .search-board-content {
+        > .scroll-content {
+          overflow-y: auto;
+          max-height: 10rem;
+          padding-top: 0.25rem;
+        }
+        > .create-button {
+          font-size: $font-size-7;
+          white-space: nowrap;
+          overflow: hidden;
+          padding: 0.25rem 0 0.25rem 0.5rem;
+          margin-bottom: 0.25rem;
+
+          > i:global(.fa) {
+            margin-right: 0.5rem;
+          }
+
+          &.selected {
+            color: $white;
+            background-color: $link;
+          }
+          @media (prefers-color-scheme: light) {
+            border-top: solid 1px $sidebar;
+            &:last-child {
+              border-bottom: solid 1px $sidebar;
+            }
+            &:not(.selected) {
+              color: $literal;
+              background-color: $bg;
+            }
+          }
+          @media (prefers-color-scheme: dark) {
+            border-top: solid 1px $sidebar-dm;
+            &:last-child {
+              border-bottom: solid 1px $sidebar-dm;
+            }
+            &:not(.selected) {
+              color: $literal-dm;
+              background-color: $bg-dm;
+            }
+          }
+        }
+      }
 
       .item {
         padding: 0 0 0.25rem 0.25rem;
       }
 
       .more-item {
-        cursor: pointer;
         font-size: $font-size-7;
         white-space: nowrap;
         overflow: hidden;
@@ -39,42 +92,7 @@
         }
       }
 
-      .new-item {
-        cursor: pointer;
-        font-size: $font-size-7;
-        white-space: nowrap;
-        overflow: hidden;
-        padding: 0.25rem 0 0.25rem 0.5rem;
 
-        > i:global(.fa) {
-          margin-right: 0.5rem;
-        }
-
-        &.selected {
-          color: $white;
-          background-color: $link;
-        }
-        @media (prefers-color-scheme: light) {
-          border-top: solid 1px $sidebar;
-          &:last-child {
-            border-bottom: solid 1px $sidebar;
-          }
-          &:not(.selected) {
-            color: $literal;
-            background-color: $bg;
-          }
-        }
-        @media (prefers-color-scheme: dark) {
-          border-top: solid 1px $sidebar-dm;
-          &:last-child {
-            border-bottom: solid 1px $sidebar-dm;
-          }
-          &:not(.selected) {
-            color: $literal-dm;
-            background-color: $bg-dm;
-          }
-        }
-      }
     }
   }
 }
