前端: 添加topic/author颜色选项和颜色显示

--- a/frontend/src/styles/base/color.scss
+++ b/frontend/src/styles/base/color.scss
@@ -144,6 +144,7 @@ $colors: (
         "skyblue" ($skyblue, $skyblue-invert, $skyblue-light, $skyblue-dark),
         "bluepurple" ($bluepurple, $bluepurple-invert, $bluepurple-light, $bluepurple-dark),
         "yellow" ($yellow, $yellow-invert, $yellow-light, $yellow-dark),
+        "orange" ($orange, $orange-invert, $orange-light, $orange-dark),
         "red" ($red, $red-invert, $red-light, $red-dark),
         "pink" ($pink, $pink-invert, $pink-light, $pink-dark),
         "deeppink" ($deeppink, $deeppink-invert, $deeppink-light, $deeppink-dark),
@@ -183,6 +184,7 @@ $colors-dark-mode: (
         "skyblue" ($skyblue, $skyblue-invert, $skyblue-light, $skyblue-dark),
         "bluepurple" ($bluepurple, $bluepurple-invert, $bluepurple-light, $bluepurple-dark),
         "yellow" ($yellow, $yellow-invert, $yellow-light, $yellow-dark),
+        "orange" ($orange, $orange-invert, $orange-light, $orange-dark),
         "red" ($red, $red-invert, $red-light, $red-dark),
         "pink" ($pink, $pink-invert, $pink-light, $pink-dark),
         "deeppink" ($deeppink, $deeppink-invert, $deeppink-light, $deeppink-dark),
